MAGNOLIA-2007 : * updated to magnolia-build-tools-1.3 * introduced the custom <documentationURL> property in poms, removed now unnecessary <url> tags * updated all dependencies/parent references to 3.5.4-SNAPSHOT
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@14289 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-workflow/pom.xml
+++ b/magnolia-module-workflow/pom.xml
@@ -9,8 +9,8 @@
   <artifactId>magnolia-module-workflow</artifactId>
   <name>magnolia-module-workflow</name>
   <description />
-  <url>http://documentation.magnolia.info/modules/workflow.html</url>
   <properties>
+    <documentationURL>http://documentation.magnolia.info/modules/workflow.html</documentationURL>
     <openwfe.version>1.7.2.1</openwfe.version>
   </properties>
   <dependencies>
