--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,10 @@ Magnolia International, based on the standard API
 for Java Content Repositories (JCR).
   </description>
   <url>http://www.magnolia.info</url>
+  <properties>
+    <magnoliaEdition>Community Edition</magnoliaEdition>
+    <documentationURL>http://documentation.magnolia.info</documentationURL>
+  </properties>  
   <issueManagement>
     <system>Jira</system>
     <url>http://jira.magnolia.info/browse/MAGNOLIA</url>
@@ -152,13 +156,25 @@ for Java Content Repositories (JCR).
       </modules>
     </profile>
     <profile>
-      <id>site</id>
+      <id>fullsite</id>
+      <distributionManagement>
+        <site>
+          <id>dev.magnolia.info</id>
+          <name>dev.magnolia.info</name>
+          <url>scp://dev.magnolia.info/sites/dev/ref/${project.version}</url>
+        </site>
+      </distributionManagement>
       <build>
         <plugins>
+          <plugin>
+            <artifactId>maven-site-plugin</artifactId>
+            <version>2.0-beta-6</version>
+          </plugin>
           <!-- this needs some more memory than the defaults ... -->
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-clover-plugin</artifactId>
+            <version>2.4</version>
             <configuration>
               <targetPercentage>0%</targetPercentage>
               <licenseLocation>${cloverLicense}</licenseLocation>
@@ -176,6 +192,71 @@ for Java Content Repositories (JCR).
           </plugin>
         </plugins>
       </build>
+      <reporting>
+        <plugins>
+          <plugin>
+            <artifactId>maven-project-info-reports-plugin</artifactId>
+            <reportSets>
+              <reportSet>
+                <reports>
+                  <report>index</report>
+                  <report>summary</report>
+                  <report>dependencies</report>
+                  <report>dependency-convergence</report>
+                  <report>issue-tracking</report>
+                  <report>license</report>
+                  <report>mailing-list</report>
+                  <report>project-team</report>
+                  <report>scm</report>
+                  <report>cim</report>
+                </reports>
+              </reportSet>
+            </reportSets>
+          </plugin>
+          <plugin>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <configuration>
+              <quiet>true</quiet>
+              <aggregate>true</aggregate>
+            </configuration>
+          </plugin>
+          <plugin>
+            <artifactId>maven-checkstyle-plugin</artifactId>
+          </plugin>
+          <plugin>
+            <artifactId>maven-pmd-plugin</artifactId>
+          </plugin>
+          <plugin>
+            <artifactId>maven-jxr-plugin</artifactId>
+          </plugin>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>clirr-maven-plugin</artifactId>
+            <configuration>
+              <minSeverity>info</minSeverity>
+              <!-- this is detected automatically by default: -->
+              <!--<comparisonVersion>3.0.2</comparisonVersion>-->
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-clover-plugin</artifactId>
+          </plugin>
+          <!-- this report is pretty useless, since we don't allow building with failing tests ... -->
+          <plugin>
+            <artifactId>maven-surefire-report-plugin</artifactId>
+          </plugin>
+          <!-- this report is very obscure - do we want it ? -->
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>jdepend-maven-plugin</artifactId>
+          </plugin>
+          <plugin>
+            <groupId>net.sourceforge.maven-taglib</groupId>
+            <artifactId>maven-taglib-plugin</artifactId>
+          </plugin>
+        </plugins>
+      </reporting>
     </profile>
   </profiles>
   <build>
@@ -338,7 +419,7 @@ for Java Content Repositories (JCR).
         </executions>
         <configuration>
           <resourceBundles>
-            <resourceBundle>info.magnolia:magnolia-build-tools-dual-licensed:1.2.2</resourceBundle>
+            <resourceBundle>info.magnolia:magnolia-build-tools-dual-licensed:1.3</resourceBundle>
           </resourceBundles>
         </configuration>
       </plugin>
@@ -357,7 +438,7 @@ for Java Content Repositories (JCR).
           <dependency>
             <groupId>info.magnolia</groupId>
             <artifactId>magnolia-build-tools-dual-licensed</artifactId>
-            <version>1.2.2</version>
+            <version>1.3</version>
           </dependency>
         </dependencies>
         <configuration>
@@ -410,74 +491,6 @@ for Java Content Repositories (JCR).
       </testResource>
     </testResources>
   </build>
-  <properties>
-    <magnoliaEdition>Community Edition</magnoliaEdition>
-  </properties>
-  <reporting>
-    <plugins>
-      <plugin>
-        <artifactId>maven-project-info-reports-plugin</artifactId>
-        <reportSets>
-          <reportSet>
-            <reports>
-              <report>index</report>
-              <report>summary</report>
-              <report>dependencies</report>
-              <report>dependency-convergence</report>
-              <report>issue-tracking</report>
-              <report>license</report>
-              <report>mailing-list</report>
-              <report>project-team</report>
-              <report>scm</report>
-              <report>cim</report>
-            </reports>
-          </reportSet>
-        </reportSets>
-      </plugin>
-      <plugin>
-        <artifactId>maven-checkstyle-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <configuration>
-          <quiet>true</quiet>
-          <aggregate>false</aggregate>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-pmd-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <artifactId>maven-jxr-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>clirr-maven-plugin</artifactId>
-        <configuration>
-          <minSeverity>info</minSeverity>
-          <!-- this is detected automatically by default: -->
-          <!--<comparisonVersion>3.0.2</comparisonVersion>-->
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-clover-plugin</artifactId>
-      </plugin>
-      <!-- this report is pretty useless, since we don't allow building with failing tests ... -->
-      <plugin>
-        <artifactId>maven-surefire-report-plugin</artifactId>
-      </plugin>
-      <!-- this report is very obscure - do we want it ? -->
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>jdepend-maven-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>net.sourceforge.maven-taglib</groupId>
-        <artifactId>maven-taglib-plugin</artifactId>
-      </plugin>
-    </plugins>
-  </reporting>
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -857,11 +870,8 @@ for Java Content Repositories (JCR).
     </dependencies>
   </dependencyManagement>
   <distributionManagement>
-    <site>
-      <id>magnolia.sf</id>
-      <name>magnolia</name>
-      <url>scp://shell.sourceforge.net/home/groups/m/ma/magnolia/htdocs/${project.version}</url>
-    </site>
+    <!-- no <site> here, so that we don't generate a site with the release plugin.
+         use the fullsite profile to generate it -->
     <downloadUrl>http://prdownloads.sourceforge.net/magnolia</downloadUrl>
   </distributionManagement>
   <repositories>
