--- a/magnolia-module-cache/pom.xml
+++ b/magnolia-module-cache/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>3.5.4-SNAPSHOT</version>
+    <version>3.5.4</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -22,12 +22,12 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>3.5.4-SNAPSHOT</version>
+      <version>3.5.4</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-admininterface</artifactId>
-      <version>3.5.4-SNAPSHOT</version>
+      <version>3.5.4</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
