MAGNOLIA-2001 : deprecated MAGNOLIA_ROOT_SYSPROPERTY in properties file
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@14395 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-empty-webapp/src/main/webapp/WEB-INF/config/default/magnolia.properties
+++ b/magnolia-empty-webapp/src/main/webapp/WEB-INF/config/default/magnolia.properties
@@ -17,6 +17,7 @@ magnolia.repositories.home=repositories
 magnolia.repositories.jackrabbit.config=WEB-INF/config/repo-conf/jackrabbit-derby-search.xml
 
 log4j.config=WEB-INF/config/default/log4j.xml
+# @deprecated since 3.5.4 - not needed anymore (was used for log4j config)
 magnolia.root.sysproperty=magnolia.root
 
 # The directories in which the bootstrap files are searched 
