--- a/magnolia-empty-webapp/src/main/webapp/WEB-INF/config/magnoliaPublic/magnolia.properties
+++ b/magnolia-empty-webapp/src/main/webapp/WEB-INF/config/magnoliaPublic/magnolia.properties
@@ -2,6 +2,7 @@
 # the value is saved in /server/admin
 magnolia.bootstrap.authorInstance=false
 
+# @deprecated since 3.5.4 - not needed anymore (was used for log4j config)
 magnolia.root.sysproperty=magnolia.root.public
 
 # the directories in which the bootstrap files are searched
