checkstyle now outputs error in the console
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@14695 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -445,6 +445,7 @@ for Java Content Repositories (JCR).
           <configLocation>magnolia-build-tools/checkstyle.xml</configLocation>
           <headerLocation>magnolia-build-tools/license-header-dual.regex</headerLocation>
           <enableRulesSummary>true</enableRulesSummary>
+          <consoleOutput>true</consoleOutput>
           <!-- this is unfortunately not supported in the 2.1 version of the checkstyle plugin -->
           <includeTestSourceDirectory>true</includeTestSourceDirectory>
         </configuration>
