MAGNOLIA-2127 : new cache - draft !
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@15220 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-cache/pom.xml
+++ b/magnolia-module-cache/pom.xml
@@ -35,6 +35,11 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jsp-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>net.sf.ehcache</groupId>
       <artifactId>ehcache</artifactId>
     </dependency>
@@ -45,6 +50,11 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.easymock</groupId>
+      <artifactId>easymock</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
