MAGNOLIA-2127 : handle gzip'd content now :)
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@15234 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-cache/pom.xml
+++ b/magnolia-module-cache/pom.xml
@@ -57,5 +57,12 @@
       <artifactId>easymock</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>info.magnolia</groupId>
+      <artifactId>magnolia-core</artifactId>
+      <version>3.6-SNAPSHOT</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>    
   </dependencies>
 </project>
