added idea/eclipse plugins configuration
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@16000 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -455,6 +455,22 @@ for Java Content Repositories (JCR).
           <includeTestSourceDirectory>true</includeTestSourceDirectory>
         </configuration>
       </plugin>
+
+      <!-- TODO : the following 2 plugin configurations will be in magnolia-parent-pom:4 -->
+      <plugin>
+        <artifactId>maven-idea-plugin</artifactId>
+        <version>2.0</version>
+        <configuration>
+          <downloadSources>true</downloadSources>
+          <jdkLevel>1.4</jdkLevel>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-eclipse-plugin</artifactId>
+        <configuration>
+          <downloadSources>true</downloadSources>
+        </configuration>
+      </plugin>
     </plugins>
     <resources>
       <resource>
