added downloadJavadocs to idea and eclipse plugins
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@16008 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -462,6 +462,7 @@ for Java Content Repositories (JCR).
         <version>2.0</version>
         <configuration>
           <downloadSources>true</downloadSources>
+          <downloadJavadocs>true</downloadJavadocs>
           <jdkLevel>1.4</jdkLevel>
         </configuration>
       </plugin>
@@ -469,6 +470,7 @@ for Java Content Repositories (JCR).
         <artifactId>maven-eclipse-plugin</artifactId>
         <configuration>
           <downloadSources>true</downloadSources>
+          <downloadJavadocs>true</downloadJavadocs>
         </configuration>
       </plugin>
     </plugins>
