two new defaults (filter and voter)
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@16029 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/src/main/resources/mgnl-beans.properties
+++ b/magnolia-core/src/main/resources/mgnl-beans.properties
@@ -13,6 +13,8 @@ info.magnolia.cms.beans.config.ServerConfiguration=info.magnolia.cms.beans.confi
 info.magnolia.cms.security.SecuritySupport=/server/security
 info.magnolia.cms.security.IPSecurityManager=info.magnolia.cms.security.IPSecurityManagerImpl$Observer
 
+info.magnolia.cms.filters.MgnlFilter=info.magnolia.cms.filters.CompositeFilter
+
 info.magnolia.cms.beans.config.FilterManager=info.magnolia.cms.beans.config.FilterManager
 info.magnolia.cms.beans.config.ParagraphManager=info.magnolia.cms.beans.config.ParagraphManager
 info.magnolia.cms.beans.config.TemplateManager=info.magnolia.cms.beans.config.TemplateManager
@@ -44,5 +46,6 @@ info.magnolia.module.admininterface.TreeHandlerManager=info.magnolia.module.admi
 info.magnolia.module.admininterface.SaveHandler=info.magnolia.module.admininterface.UUIDSaveHandler
 
 info.magnolia.voting.Voting = info.magnolia.voting.DefaultVoting
+info.magnolia.voting.Voter = info.magnolia.voting.voters.VoterSet
 
 
