easier real repository test cases: - config files can lay on the classpath (was only working for tests in core because it pointed to /target folder) - bootstrap methods
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@16031 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/src/test/resources/test-magnolia.properties
+++ b/magnolia-core/src/test/resources/test-magnolia.properties
@@ -7,16 +7,18 @@
 magnolia.cache.startdir=target/cache
 magnolia.upload.tmpdir=target/tmp
 magnolia.exchange.history=target/history
-magnolia.repositories.config=target/test-classes/test-repositories.xml
+# points to the classpath resources
+magnolia.repositories.config=/test-repositories.xml
 magnolia.repositories.home=target/repositories
-magnolia.repositories.jackrabbit.config=target/test-classes/repo-conf/jackrabbit-memory-search.xml
+# points to the classpath resources, but will be extracted and the property reset
+magnolia.repositories.jackrabbit.config=/repo-conf/jackrabbit-memory-search.xml
 magnolia.app.rootdir=.
 magnolia.webapp=test
 
 log4j.config=WEB-INF/config/default/log4j.xml
 magnolia.root.sysproperty=magnolia.root
 
-# The directories in which the bootstrap files are searched 
+# The directories in which the bootstrap files are searched
 magnolia.bootstrap.dir=WEB-INF/bootstrap/author WEB-INF/bootstrap/common
 
 # This is only used for the initial installation afterward the configuration in the config repository is used
