MAGNOLIA-1198: - magnolia.develop is false by default - removed wired and deprecated properties
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@16037 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-empty-webapp/src/main/webapp/WEB-INF/config/default/magnolia.properties
+++ b/magnolia-empty-webapp/src/main/webapp/WEB-INF/config/default/magnolia.properties
@@ -17,10 +17,8 @@ magnolia.repositories.home=repositories
 magnolia.repositories.jackrabbit.config=WEB-INF/config/repo-conf/jackrabbit-derby-search.xml
 
 log4j.config=WEB-INF/config/default/log4j.xml
-# @deprecated since 3.5.4 - not needed anymore (was used for log4j config)
-magnolia.root.sysproperty=magnolia.root
 
-# The directories in which the bootstrap files are searched 
+# The directories in which the bootstrap files are searched
 magnolia.bootstrap.dir=WEB-INF/bootstrap/author WEB-INF/bootstrap/common
 
 # This is only used for the initial installation afterward the configuration in the config repository is used
@@ -31,21 +29,14 @@ magnolia.bootstrap.authorInstance=true
 # the sample data
 magnolia.bootstrap.samples=true
 
-# Switch to false to enahnce the performance of the javascript generation and similar
-magnolia.develop=true
+# Switch to false to enhance the performance of the javascript generation and similar
+magnolia.develop=false
 
 #--------------------------------------------
 # Repository connection
 #--------------------------------------------
 magnolia.connection.jcr.userId = admin
 magnolia.connection.jcr.password = admin
-
-#--------------------------------------------
-# Server properties
-# - Do not change server id after registering repository
-#--------------------------------------------
-# @deprecated since 3.5.4 - not used
-magnolia.server.id = author
 
 # Set it to true if bootstrapping/update should be performed automatically
 magnolia.update.auto=false
