--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>info.magnolia</groupId>
     <artifactId>magnolia-parent-pom</artifactId>
-    <version>3</version>
+    <version>4-SNAPSHOT</version>
   </parent>
   <groupId>info.magnolia</groupId>
   <artifactId>magnolia-project</artifactId>
@@ -59,41 +59,6 @@ for Java Content Repositories (JCR).
   </mailingLists>
   <developers>
     <developer>
-      <id>bkraft</id>
-      <name>Boris Kraft</name>
-      <email>boris.kraft(at)magnolia.info</email>
-      <organization>Magnolia Intl</organization>
-      <timezone>+1</timezone>
-    </developer>
-    <developer>
-      <id>pmangold</id>
-      <name>Pascal Mangold</name>
-      <email>pascal.mangold(at)magnolia.info</email>
-      <organization>Magnolia Intl</organization>
-      <timezone>+1</timezone>
-    </developer>
-    <developer>
-      <id>scharles</id>
-      <name>Sameer Charles</name>
-      <email>sameer.charles(at)magnolia.info</email>
-      <organization>Magnolia Intl</organization>
-      <timezone>+1</timezone>
-    </developer>
-    <developer>
-      <id>vwyser</id>
-      <name>Vinzenz Wyser</name>
-      <email>vinzenz.wyser(at)magnolia.info</email>
-      <organization>Magnolia Intl</organization>
-      <timezone>+1</timezone>
-    </developer>
-    <developer>
-      <id>fgiust</id>
-      <name>Fabrizio Giustina</name>
-      <email>fgiust(at)openmindonline.it</email>
-      <organization>openmind</organization>
-      <timezone>+1</timezone>
-    </developer>
-    <developer>
       <id>philipp</id>
       <name>Philipp Bracher</name>
       <email>philipp.bracher(at)magnolia.info</email>
@@ -115,22 +80,54 @@ for Java Content Repositories (JCR).
       <timezone>+1</timezone>
     </developer>
     <developer>
+      <id>scharles</id>
+      <name>Sameer Charles</name>
+      <email>sameer.charles(at)magnolia.info</email>
+      <organization>Magnolia Intl</organization>
+      <timezone>+1</timezone>
+    </developer>
+    <developer>
+      <id>fgiust</id>
+      <name>Fabrizio Giustina</name>
+      <email>fgiust(at)openmindonline.it</email>
+      <organization>openmind</organization>
+      <timezone>+1</timezone>
+    </developer>
+    <developer>
       <id>vsteller</id>
       <name>Vivian Steller</name>
       <email>vivian.steller(at)magnolia.info</email>
       <organization>Magnolia Intl</organization>
       <timezone>+1</timezone>
     </developer>
+    <developer>
+      <id>bkraft</id>
+      <name>Boris Kraft</name>
+      <email>boris.kraft(at)magnolia.info</email>
+      <organization>Magnolia Intl</organization>
+      <timezone>+1</timezone>
+    </developer>
+    <developer>
+      <id>pmangold</id>
+      <name>Pascal Mangold</name>
+      <email>pascal.mangold(at)magnolia.info</email>
+      <organization>Magnolia Intl</organization>
+      <timezone>+1</timezone>
+    </developer>
   </developers>
+  <contributors>
+    <contributor>
+      <name>Vinzenz Wyser</name>
+      <email>vinzenz.wyser(at)magnolia.info</email>
+      <organization>Magnolia Intl</organization>
+      <timezone>+1</timezone>
+    </contributor>
+  </contributors>
   <scm>
     <connection>scm:svn:http://svn.magnolia.info/svn/magnolia/trunk</connection>
     <developerConnection>scm:svn:http://svn.magnolia.info/svn/magnolia/trunk</developerConnection>
     <url>http://svn.magnolia.info/view/magnolia/trunk/</url>
   </scm>
-  <organization>
-    <name>Magnolia International</name>
-    <url>http://www.magnolia.info</url>
-  </organization>
   <profiles>
     <profile>
       <id>bundle</id>
@@ -152,12 +149,19 @@ for Java Content Repositories (JCR).
         </property>
       </activation>
       <modules>
+        <module>magnolia-module-data</module>
+        <module>magnolia-module-documentation</module>
+        <module>magnolia-module-docutools</module>
         <module>magnolia-module-dms</module>
+        <module>magnolia-module-excelrenderer</module>
         <module>magnolia-module-forum</module>
-        <module>magnolia-module-public-user-registration</module>
+        <module>magnolia-module-imagefiltering</module>
+        <module>magnolia-module-observation</module>
         <module>magnolia-module-poll</module>
         <module>magnolia-module-scheduler</module>
-        <module>magnolia-module-data</module>
+        <module>magnolia-module-todolist</module>
+        <module>magnolia-module-public-user-registration</module>
+        <module>magnolia-module-wiki</module>
       </modules>
     </profile>
     <profile>
@@ -171,10 +175,6 @@ for Java Content Repositories (JCR).
       </distributionManagement>
       <build>
         <plugins>
-          <plugin>
-            <artifactId>maven-site-plugin</artifactId>
-            <version>2.0-beta-6</version>
-          </plugin>
           <!-- this needs some more memory than the defaults ... -->
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -300,19 +300,12 @@ for Java Content Repositories (JCR).
         </plugin>
         <plugin>
           <artifactId>maven-release-plugin</artifactId>
-          <version>2.0-beta-7</version>
           <configuration>
             <autoVersionSubmodules>true</autoVersionSubmodules>
           </configuration>
         </plugin>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-assembly-plugin</artifactId>
-          <!-- Needs at least version 2.2-beta-2 of the maven-assembly-plugin, for it resolves the following issues:
-               http://jira.codehaus.org/browse/MASSEMBLY-73
-               http://jira.codehaus.org/browse/MASSEMBLY-221
-               http://jira.codehaus.org/browse/MASSEMBLY-250 -->
-          <version>2.2-beta-2-magnolia-20071126</version>
           <configuration>
             <descriptors>
               <descriptor>info.magnolia:magnolia-bundle-assembly:1.1</descriptor>
@@ -334,25 +327,6 @@ for Java Content Repositories (JCR).
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
-        <version>1.0-alpha-1</version>
-        <executions>
-          <execution>
-            <id>enforce</id>
-            <configuration>
-              <rules>
-                <!--<requireJavaVersion>-->
-                <!--<version>[1.3,1.6]</version>-->
-                <!--</requireJavaVersion>-->
-                <requireMavenVersion>
-                  <version>2.0.6</version>
-                </requireMavenVersion>
-              </rules>
-            </configuration>
-            <goals>
-              <goal>enforce</goal>
-            </goals>
-          </execution>
-        </executions>
       </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -453,24 +427,6 @@ for Java Content Repositories (JCR).
           <consoleOutput>true</consoleOutput>
           <!-- this is unfortunately not supported in the 2.1 version of the checkstyle plugin -->
           <includeTestSourceDirectory>true</includeTestSourceDirectory>
-        </configuration>
-      </plugin>
-
-      <!-- TODO : the following 2 plugin configurations will be in magnolia-parent-pom:4 -->
-      <plugin>
-        <artifactId>maven-idea-plugin</artifactId>
-        <version>2.0</version>
-        <configuration>
-          <downloadSources>true</downloadSources>
-          <downloadJavadocs>true</downloadJavadocs>
-          <jdkLevel>1.4</jdkLevel>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-eclipse-plugin</artifactId>
-        <configuration>
-          <downloadSources>true</downloadSources>
-          <downloadJavadocs>true</downloadJavadocs>
         </configuration>
       </plugin>
     </plugins>
