use surefire-plugin 2.4.3 and set useManifestOnlyJar to false
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@16087 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -349,6 +349,12 @@ for Java Content Repositories (JCR).
         </executions>
       </plugin>
       <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <useManifestOnlyJar>false</useManifestOnlyJar>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>info.magnolia</groupId>
         <artifactId>maven-setproperty-plugin</artifactId>
         <version>1.0.1</version>
