do not enforce maven version if executed in eclipse
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@16110 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -263,6 +263,25 @@ for Java Content Repositories (JCR).
         </plugins>
       </reporting>
     </profile>
+    <profile>
+      <id>eclipse</id>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-enforcer-plugin</artifactId>
+              <configuration>
+                <skip>true</skip>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+      <modules>
+        <module>magnolia-bundle</module>
+      </modules>
+    </profile>
   </profiles>
   <build>
     <pluginManagement>
