now using parent pom v4
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@16205 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>info.magnolia</groupId>
     <artifactId>magnolia-parent-pom</artifactId>
-    <version>4-SNAPSHOT</version>
+    <version>4</version>
   </parent>
   <groupId>info.magnolia</groupId>
   <artifactId>magnolia-project</artifactId>
