--- a/magnolia-taglib-utility/pom.xml
+++ b/magnolia-taglib-utility/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>3.6-SNAPSHOT</version>
+    <version>3.6-m2</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -13,17 +13,17 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>3.6-SNAPSHOT</version>
+      <version>3.6-m2</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-taglib-cms</artifactId>
-      <version>3.6-SNAPSHOT</version>
+      <version>3.6-m2</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-mail</artifactId>
-      <version>3.6-SNAPSHOT</version>
+      <version>3.6-m2</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
