MAGNOLIA-983 / MAGNOLIA-1934 : after upgrading to subethamail 1.2, i can't seem to get these tests failing again ...
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@16289 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-mail/pom.xml
+++ b/magnolia-module-mail/pom.xml
@@ -8,17 +8,17 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>magnolia-module-mail</artifactId>
   <name>magnolia-module-mail</name>
-  <build>
-    <plugins>
+  <!--<build>-->
+    <!--<plugins>-->
       <!-- MAGNOLIA-1934 Exclude mail tests execution during release until they are fixed properly -->
-      <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <skip>true</skip>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+      <!--<plugin>-->
+        <!--<artifactId>maven-surefire-plugin</artifactId>-->
+        <!--<configuration>-->
+          <!--<skip>true</skip>-->
+        <!--</configuration>-->
+      <!--</plugin>-->
+    <!--</plugins>-->
+  <!--</build>-->
   <dependencies>
     <dependency>
       <groupId>info.magnolia</groupId>
@@ -46,7 +46,7 @@
     <dependency>
       <groupId>org.subethamail</groupId>
       <artifactId>subethasmtp-wiser</artifactId>
-      <version>1.0.3</version>
+      <version>1.2</version>
       <classifier>java14</classifier>
       <scope>test</scope>
       <exclusions>
