[maven-release-plugin] prepare release magnolia-3.6-m3
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@16455 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-fckeditor/pom.xml
+++ b/magnolia-module-fckeditor/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>3.6-SNAPSHOT</version>
+    <version>3.6-m3</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -12,17 +12,17 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>3.6-SNAPSHOT</version>
+      <version>3.6-m3</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-admininterface</artifactId>
-      <version>3.6-SNAPSHOT</version>
+      <version>3.6-m3</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-gui</artifactId>
-      <version>3.6-SNAPSHOT</version>
+      <version>3.6-m3</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -43,7 +43,7 @@
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
       <type>test-jar</type>
-      <version>3.6-SNAPSHOT</version>
+      <version>3.6-m3</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
