MAGNOLIA-2238 : moved Server$Observer to ServerConfiguration$Observer
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@16668 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/src/main/resources/mgnl-beans.properties
+++ b/magnolia-core/src/main/resources/mgnl-beans.properties
@@ -9,7 +9,7 @@ info.magnolia.module.ModuleRegistry=info.magnolia.module.ModuleRegistryImpl
 
 info.magnolia.cms.mail.handlers.MgnlMailHandler=info.magnolia.cms.mail.handlers.SimpleMailHandler
 
-info.magnolia.cms.beans.config.ServerConfiguration=info.magnolia.cms.beans.config.Server$Observer
+info.magnolia.cms.beans.config.ServerConfiguration=info.magnolia.cms.beans.config.ServerConfiguration$Observer
 info.magnolia.cms.security.SecuritySupport=/server/security
 info.magnolia.cms.security.IPSecurityManager=info.magnolia.cms.security.IPSecurityManagerImpl$Observer
 
