MAGNOLIA-2304 :  a first unit test for ReceiveFilter
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@17230 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-exchange-simple/pom.xml
+++ b/magnolia-module-exchange-simple/pom.xml
@@ -30,6 +30,12 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <!-- needed for tests ... -->
+      <groupId>javax.servlet</groupId>
+      <artifactId>jsp-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>javax.jcr</groupId>
       <artifactId>jcr</artifactId>
     </dependency>
