--- a/magnolia-core/src/test/resources/test-magnolia.properties
+++ b/magnolia-core/src/test/resources/test-magnolia.properties
@@ -46,3 +46,13 @@ magnolia.server.id = author
 
 # Set it to true if bootstrapping/update should be performed automatically
 magnolia.update.auto=false
+
+test.one=property
+test.two=nested ${test.one}
+test.three=another ${test.two}
+test.circular1=${test.circular2}
+test.circular2=${test.circular1}
+test.circular3=${test.circular3}
+test.broken1=test 1 ${
+test.broken2=test 2 $
+
