SYS-25 : fixing svn URLs in pom files
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@17682 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -124,9 +124,9 @@ for Java Content Repositories (JCR).
     </contributor>
   </contributors>
   <scm>
-    <connection>scm:svn:http://svn.magnolia.info/svn/magnolia/trunk</connection>
-    <developerConnection>scm:svn:http://svn.magnolia.info/svn/magnolia/trunk</developerConnection>
-    <url>http://svn.magnolia.info/view/magnolia/trunk/</url>
+    <connection>scm:svn:http://svn.magnolia.info/svn/community/magnolia/trunk</connection>
+    <developerConnection>scm:svn:http://svn.magnolia.info/svn/community/magnolia/trunk</developerConnection>
+    <url>http://svn.magnolia.info/view/community/magnolia/trunk/</url>
   </scm>
   <profiles>
     <profile>
